--- a/Style/styles.css
+++ b/Style/styles.css
@@ -4,7 +4,7 @@
 }
 
 .navbar {
-  background: #f7f7f7;
+  background: #ffffff;
   height: 80px;
   display: flex;
   justify-content: space-between;
@@ -15,7 +15,6 @@
 
 .navbar__logo {
   color: #222121;
-  cursor: pointer;
   text-decoration: none;
   font-size: 2rem;
   margin-left: 24px;
