--- a/Style/styles.css
+++ b/Style/styles.css
@@ -198,3 +198,36 @@
   height: 100%;
   width: 100%;
 }/*# sourceMappingURL=styles.css.map */
+
+/* ///////////////////// popup////////////////////// */
+
+.popup {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.popup-content {
+  background-color: white;
+  color: black;
+  padding: 20px;
+  border-radius: 10px;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.2);
+  text-align: center;
+}
+
+#closePopup {
+  background-color: #00cc66;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  cursor: pointer;
+}
